# ferro_noise

./: Cargo.toml
.github/workflows/: ci.yml
src/: algorithm.rs  float.rs  lib.rs  math.rs  noise.rs  perlin_noise.rs  rng.rs  ser.rs  source.rs  task.rs
src/math/: algorithm.rs  easing.rs
src/rng/: pcg.rs  rand.rs  xorshift.rs
src/ser/: aggregate_config.rs  bias_config.rs  cellular_config.rs  fractal_config.rs  gradient_config.rs  name_or_const.rs  noise.rs  scale_config.rs  scale_offset_config.rs  selector_config.rs  transform_domain_config.rs
src/source/: blender.rs  cellular.rs  gradient.rs  perlin_noise.rs  vec3.rs
src/task/: aggregator.rs  bias.rs  cache.rs  cellular.rs  fractal.rs  gradient.rs  perlin.rs  scale.rs  scale_offset.rs  selector.rs  task.rs  task_tree.rs  transform_domain.rs
src/task/aggregator/: builder.rs
src/task/bias/: builder.rs
src/task/cache/: builder.rs
src/task/cellular/: builder.rs
src/task/fractal/: billowing.rs  builder.rs  fbm.rs  ridged_multi.rs
src/task/gradient/: builder.rs
src/task/scale/: builder.rs
src/task/scale_offset/: builder.rs
src/task/selector/: builder.rs
src/task/task/: named_or_source.rs
src/task/task_source/: named_or_source.rs
src/task/transform_domain/: builder.rs
