[package]
name = "ferro_noise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.160", optional = true, features = ["derive"] }
toml = { version = "0.7.3", optional = true }

[features]
default = ["serialization"]
serialization = ["serde", "toml"]
